# CP-repo

./: CMakeLists.txt  github.sh  trapnh.cpp
code/chtoj/: grade11 - Shortcut.lnk
code/chtoj/Oct-9-25/: AODAI.cpp  CSBN.cpp  SDB.cpp  THUGON.cpp  sodep.cpp
code/chtoj/bfs/: BFS2.cpp  BFS3.cpp  BFS_1.cpp  EBOLA.cpp  LABYRINTH.cpp  MECUNG.cpp  MECUNG0.cpp  MECUNG2.cpp  MECUNG3.cpp  MECUNG4.cpp  RMOVE.cpp  SOVUNG.cpp  VMUNCH.cpp  bfsvohuong.cpp  cafe.cpp  farm.cpp  quanma.cpp  quantuongdilac.cpp
code/chtoj/boiduongdt2025/: BISTR.cpp  CNTPAL.cpp  GAME.cpp  GPT.cpp  special.cpp
code/chtoj/chondtgq2016/: ball.cpp  post.cpp
code/chtoj/chondtqg2015/: brank.cpp  findnum.cpp
code/chtoj/chondtqg2018/: cheg.cpp
code/chtoj/chondtqg2019/: money.cpp  point.cpp
code/chtoj/chondtqg2020/: COMPLE.cpp  DIVSEQ.cpp  NUM39.cpp  SEQUEN.cpp  nonrep.cpp
code/chtoj/chondtqg2021/: CHANGE.cpp  IMPACT.cpp  PCTOUR.cpp  SDCAR.cpp
code/chtoj/chondtqg2022/: BOX.cpp  PAIR.cpp  RIDDLE.cpp
code/chtoj/cnp/: ELEVATOR2.cpp  ball.cpp  bangcuuchuong.cpp  cnp1.cpp  frpr.cpp  part.cpp  sodep.cpp  trungvilonnhat.cpp
code/chtoj/dehsgtinh10_23_24/: INTP  INTP.cpp  SPOR  SPOR.cpp  cpack  cpack.cpp
code/chtoj/dequy_quylui/: daochu  daochu.cpp  dayconketiep  dayconketiep.cpp  daynp  daynp.cpp  daynp2  daynp2.cpp  enum  enum.cpp  henp  henp.cpp  hoanvi  hoanvi.cpp  hoanviketiep  hoanviketiep.cpp  ipara  ipara.cpp  iparc  iparc.cpp  luythua2  luythua2.cpp  permutation  permutation.cpp  pseq  pseq.cpp  substr.cpp  tapcon  tapcon.cpp  tohop  tohop.cpp  xaunpketiep  xaunpketiep.cpp
code/chtoj/dequyconho/:  BRACKETS.cpp  IPARD.cpp  WSEQ0.cpp  dnpk.cpp  enum1  enum1.cpp  wseq1.cpp
code/chtoj/dijkstra/: CAPTION.cpp  CSPATH.cpp  DIJKSTRA  DIJKSTRA.cpp  REVAMP.cpp  SCOOL.cpp
code/chtoj/disjonset/: DSF.cpp  IOIBIN.cpp  YG.cpp
code/chtoj/dothilienthong/: BIC.cpp  ctree.cpp  flower.cpp  message  message.cpp  sconnect.cpp  slow.cpp  sperfect  sperfect.cpp  treat.cpp
code/chtoj/duyetphantap/: atm.cpp  expression.cpp  maxsub.cpp
code/chtoj/hsg10_2324/: INTP  INTP.cpp  SPOR  SPOR.cpp
code/chtoj/khop_cau/: CNODE.cpp  cut.cpp
code/chtoj/ktradt/: DAYDIEN.cpp  FOOD.cpp
code/chtoj/m3\/: checkin.cpp  hackt.cpp  tabg.cpp
code/chtoj/miscellaneous/: SPNUM  SPNUM.cpp
code/chtoj/prehsg10_1/: FIGURE  FIGURE.cpp  GBOMB  GBOMB.cpp  snt  snt.cpp  tempCodeRunnerFile.cpp
code/chtoj/prehsg10_2/: matketnoi.cpp  tamgiacnguyento  tamgiacnguyento.cpp
code/chtoj/prehsg10_4/: donkhach  donkhach.cpp  socola.cpp  tong3  tong3.cpp
code/chtoj/priority_queue/: BOCSOI13.cpp  COUPONS.cpp  KMIN.cpp  LISTMAN.cpp  PEACH.cpp  PQ.cpp  partition.cpp
code/chtoj/quaylui_nhanhcan/: ABC  ABC.cpp  BINSTR3  BINSTR3.cpp  Expression.cpp  TUGOFWAR  TUGOFWAR.cpp  fbird  fbird.cpp  ksack1.cpp  subsetsum  subsetsum.cpp  subsetsum3.cpp  v8score  v8score.cpp
code/chtoj/stack/: LBRACKET.cpp  PARENTHESES.cpp  deldigit  deldigit.cpp  lineup  lineup.cpp  sans.py
code/chtoj/tk5_22022025/: TRIANGLES.cpp  cheby  cheby.cpp
code/chtoj/tk5_25022025/: mindis  mindis.cpp  pairs.cpp  schedule  schedule.cpp  stat.cpp
code/chtoj/tk5_luyende/: act21  act21.cpp  cover1  cover1.cpp  cpair  cpair.cpp  elevator  elevator.cpp  ssort1  ssort1.cpp
code/chtoj/tk5_luyende(dr)/: cau1.cpp  cau2  cau2.cpp  cau3.cpp
code/chtoj/tk5_luyende01/: sub  sub.cpp  tprime  tprime.cpp  tprime_remake
code/chtoj/tk5_luyende02/: DIVISOR  DIVISOR.cpp  PAIRPBRO  PAIRPBRO.cpp  sdb  sdb.cpp
code/chtoj/tk5_luyende03/: RACE  RACE.cpp  SUMMAX  SUMMAX.cpp  UCLNAB  UCLNAB.cpp  tempCodeRunnerFile.cpp
code/chtoj/tk5_luyende04/: FSEQ  FSEQ.cpp  MINQ  MINQ.cpp  POINT  POINT.cpp
code/chtoj/tk5_luyende06/:  FLOAT.cpp   MMSEG.cpp  COUPONS.cpp
code/chtoj/tk5_luyende08/: CDK.cpp  SP01  SP01.cpp  meet.cpp
code/chtoj/tk5_luyende09/: lminmax  lminmax.cpp  spair  spair.cpp
code/chtoj/tk5_luyende10/: BONUS_lbcpp  CDIV.cpp  DQUERY.cpp
code/chtoj/traihehungvuong2025/: count.cpp  game.cpp  road.cpp  table.cpp
code/cses/dynamic_programming/: array_description.cpp  book_shop.cpp  coin_combinations_1.cpp  coin_combinations_2.cpp  counting_towers.cpp  dice_combinations.cpp  grid_path_1.cpp  minimizing_coins.cpp  removing_digits.cpp
code/marisaoj/: hoitruong.cpp  lcs.cpp  sonrao.cpp
code/marisaoj/.cph/: .hoitruong.cpp_e4d82102b7d7113c333b4be6398f1aa1.prob  .lcs.cpp_8fdeb0dad0986eb8dd4bb7f41012a039.prob
code/tabi/HSG HT 25-26 #1/: Xu.cpp
code/tabi/HSG HT 25-26 #12/: fence.cpp  rbs.cpp
code/tabi/HSG HT 25-26 #14/: A.cpp  B.cpp
code/tabi/HSG HT 25-26 #2/: sach.cpp
code/tabi/HSG HT 25-26 #3/: cat.cpp  keo.cpp  sua.cpp
code/tabi/HSG HT 25-26 #4/: tabiminecraft  tabiminecraft.cpp  tabingame.cpp  tabinphim.cpp
code/tabi/HSG HT 25-26 #5/: cambay.cpp
code/tabi/HSG HT 25-26 #6/: chuyenbay.cpp  daypho.cpp  doituyen.cpp  mahieu.cpp
code/tabi/HSG HT 25-26 #7/: daysothuvi.cpp  diemyeu.cpp
nearby/: SPESS.cpp  btnk.cpp  cmov.cpp  decb.cpp  fiwo.cpp  lis.cpp  race.cpp  takep.cpp  talent.cpp  wei.cpp
repo/: a  a.cpp  a.inp  a_trau  a_trau.ans  a_trau.cpp  findthebiggestprimefactors.cpp  gentest_macos  gentest_macos.cpp  gentest_win.cpp  sangdoan.cpp  snippet.cpp  tsnt  tsnt.cpp
repo/.cph/: .a.cpp_0c20ee59a2ae148b30fb99cbd1d8ca37.prob  .a_trau.cpp_f654118daa4a67cbf1cd62304064a25e.prob
tests/: filetest_1  filetest_1.cpp  filetest_2  filetest_2.cpp  filetest_3.cpp  filetest_4.cpp  filetest_5.cpp  index.html  note.tldr
tests/.cph/: .filetest_1.cpp_2656c1b359cc082231cc3e4937cdd5f5.prob  .filetest_1.cpp_889583205ae4335d297b3f315b075765.prob  .filetest_1.cpp_a8eef2671773b82e436305fa4f962956.prob  .filetest_1.cpp_c1dc51ba02f93e457a1e287ad763005a.prob  .filetest_1.cpp_c8fa3c6a81bdb2be70540dc8680a1763.prob  .filetest_1.cpp_d06d0ec2e420fb9aecf6df764d461e51.prob  .filetest_2.cpp_16051c84aac45291da418ee6ea3faa28.prob  .filetest_2.cpp_bc08eef1e7fae57a7801c44ca09e6052.prob  .filetest_2.cpp_ed92ff0ad7e6e88d500f099ed93242fd.prob  .filetest_3.cpp_ae02e215f0e348a0a8f7e537045cfa3b.prob  .filetest_3.cpp_effafd09905e9d9d4cda82240b2407a8.prob  .test.py_4c1f955397e3bda9b26a8fe66d3eae30.prob
(+546 files in other folders)
