cmake_minimum_required(VERSION 4.0)
project(workspaces)

set(CMAKE_CXX_STANDARD 14)

include_directories(code/codeforces/cogiaiquocgia/ps-bn)

add_executable(workspaces
        code/chondtgq2016/ball.cpp
        code/chondtgq2016/post.cpp
        code/chtoj/bfs/BFS2.cpp
        code/chtoj/bfs/BFS3.cpp
        code/chtoj/bfs/BFS_1.cpp
        code/chtoj/bfs/bfsvohuong.cpp
        code/chtoj/bfs/cafe.cpp
        code/chtoj/bfs/EBOLA.cpp
        code/chtoj/bfs/farm.cpp
        code/chtoj/bfs/LABYRINTH.cpp
        code/chtoj/bfs/MECUNG.cpp
        code/chtoj/bfs/MECUNG0.cpp
        code/chtoj/bfs/MECUNG2.cpp
        code/chtoj/bfs/MECUNG3.cpp
        code/chtoj/bfs/MECUNG4.cpp
        code/chtoj/bfs/quanma.cpp
        code/chtoj/bfs/quantuongdilac.cpp
        code/chtoj/bfs/RMOVE.cpp
        code/chtoj/bfs/SOVUNG.cpp
        code/chtoj/bfs/VMUNCH.cpp
        code/chtoj/boiduongdt2025/BISTR.cpp
        code/chtoj/boiduongdt2025/CNTPAL.cpp
        code/chtoj/boiduongdt2025/GAME.cpp
        code/chtoj/boiduongdt2025/GPT.cpp
        code/chtoj/boiduongdt2025/special.cpp
        code/chtoj/chondtqg2015/brank.cpp
        code/chtoj/chondtqg2015/cheby.cpp
        code/chtoj/chondtqg2015/findnum.cpp
        code/chtoj/chondtqg2015/NUMTAB.cpp
        code/chtoj/chondtqg2018/cheg.cpp
        code/chtoj/chondtqg2020/DIVSEQ.cpp
        code/chtoj/chondtqg2020/NUM39.cpp
        code/chtoj/dehsgtinh10_23_24/cpack.cpp
        code/chtoj/dehsgtinh10_23_24/INTP.cpp
        code/chtoj/dehsgtinh10_23_24/SPOR.cpp
        code/chtoj/dequy_quylui/daochu.cpp
        code/chtoj/dequy_quylui/dayconketiep.cpp
        code/chtoj/dequy_quylui/daynp.cpp
        code/chtoj/dequy_quylui/daynp2.cpp
        code/chtoj/dequy_quylui/enum.cpp
        code/chtoj/dequy_quylui/henp.cpp
        code/chtoj/dequy_quylui/hoanvi.cpp
        code/chtoj/dequy_quylui/hoanviketiep.cpp
        code/chtoj/dequy_quylui/ipara.cpp
        code/chtoj/dequy_quylui/iparc.cpp
        code/chtoj/dequy_quylui/luythua2.cpp
        code/chtoj/dequy_quylui/permutation.cpp
        code/chtoj/dequy_quylui/pseq.cpp
        code/chtoj/dequy_quylui/tapcon.cpp
        code/chtoj/dequy_quylui/tempCodeRunnerFile.cpp
        code/chtoj/dequy_quylui/tohop.cpp
        code/chtoj/dequy_quylui/xaunpketiep.cpp
        "code/chtoj/dequyconho/ BRACKETS.cpp"
        code/chtoj/dequyconho/dnpk.cpp
        code/chtoj/dequyconho/enum1.cpp
        code/chtoj/dequyconho/IPARB.cpp
        code/chtoj/dequyconho/IPARD.cpp
        code/chtoj/dequyconho/WSEQ0.cpp
        code/chtoj/dequyconho/wseq1.cpp
        code/chtoj/dijkstra/CAPTION.cpp
        code/chtoj/dijkstra/CSPATH.cpp
        code/chtoj/dijkstra/DIJKSTRA.cpp
        code/chtoj/dijkstra/REVAMP.cpp
        code/chtoj/dijkstra/SCOOL.cpp
        code/chtoj/disjonset/DSF.cpp
        code/chtoj/disjonset/IOIBIN.cpp
        code/chtoj/disjonset/YG.cpp
        code/chtoj/dothilienthong/BIC.cpp
        code/chtoj/dothilienthong/ctree.cpp
        code/chtoj/dothilienthong/flower.cpp
        code/chtoj/dothilienthong/message.cpp
        code/chtoj/dothilienthong/sconnect.cpp
        code/chtoj/dothilienthong/slow.cpp
        code/chtoj/dothilienthong/sperfect.cpp
        code/chtoj/dothilienthong/treat.cpp
        "code/chtoj/dt2025/b1/AQUARIUM(1).cpp"
        code/chtoj/dt2025/b1/AQUARIUM.cpp
        "code/chtoj/dt2025/b1/arrange(1).cpp"
        code/chtoj/dt2025/b1/arrange.cpp
        "code/chtoj/dt2025/b1/GCDRECT(1).cpp"
        code/chtoj/dt2025/b1/GCDRECT.cpp
        "code/chtoj/dt2025/b1/hackathon(1).cpp"
        code/chtoj/dt2025/b1/hackathon.cpp
        "code/chtoj/dt2025/b1/IMAGE(1).cpp"
        code/chtoj/dt2025/b1/IMAGE.cpp
        code/chtoj/dt2025/b1/research.cpp
        "code/chtoj/dt2025/b1/wedding(1).cpp"
        code/chtoj/dt2025/b1/wedding.cpp
        code/chtoj/dt2025/b10/PHATQUA.cpp
        code/chtoj/dt2025/b10/tempCodeRunnerFile.cpp
        code/chtoj/dt2025/b10/thungan.cpp
        code/chtoj/dt2025/b11/class.cpp
        code/chtoj/dt2025/b11/net2line.cpp
        code/chtoj/dt2025/b11/noel.cpp
        code/chtoj/dt2025/b12/daycs.cpp
        code/chtoj/dt2025/b12/quantuong.cpp
        code/chtoj/dt2025/b13/a.cpp
        code/chtoj/dt2025/b13/b.cpp
        code/chtoj/dt2025/b2/factorial.cpp
        code/chtoj/dt2025/b2/FISH.cpp
        code/chtoj/dt2025/b2/LABYRINTH.cpp
        code/chtoj/dt2025/b2/ski.cpp
        code/chtoj/dt2025/b3/camera.cpp
        "code/chtoj/dt2025/b3/FROGS(1).cpp"
        code/chtoj/dt2025/b3/FROGS.cpp
        code/chtoj/dt2025/b3/pairs.cpp
        code/chtoj/dt2025/b3/RECT.cpp
        code/chtoj/dt2025/b4/coloring.cpp
        code/chtoj/dt2025/b4/sumarr.cpp
        code/chtoj/dt2025/b5/bottles.cpp
        code/chtoj/dt2025/b5/centre28.cpp
        code/chtoj/dt2025/b5/frog.cpp
        code/chtoj/dt2025/b5/gas.cpp
        code/chtoj/dt2025/b5/viphunter.cpp
        code/chtoj/dt2025/b6/problema.cpp
        code/chtoj/dt2025/b7/FRACCMP.cpp
        code/chtoj/dt2025/b7/PRODUCT.cpp
        code/chtoj/dt2025/b7/SHARE.cpp
        code/chtoj/dt2025/b8/PA.cpp
        code/chtoj/dt2025/b8/STONES.cpp
        code/chtoj/dt2025/b9/game.cpp
        code/chtoj/dt2025/b9/teams.cpp
        code/chtoj/dutuyen/d1_dt10/FRACTION.cpp
        code/chtoj/dutuyen/d1_dt10/HPRIME.cpp
        code/chtoj/dutuyen/d1_dt10/PALSTR.cpp
        code/chtoj/dutuyen/d2_dt10/AGGR.cpp
        code/chtoj/dutuyen/d2_dt10/CANDY.cpp
        code/chtoj/dutuyen/d2_dt10/GCDRECT.cpp
        code/chtoj/dutuyen/d3_dt10/UNLOCK.cpp
        code/chtoj/dutuyen/dp/BOARD.cpp
        code/chtoj/dutuyen/dp/cuta.cpp
        code/chtoj/dutuyen/dp/FLOWERS.cpp
        code/chtoj/dutuyen/dp/INCSEQ.cpp
        code/chtoj/dutuyen/dp/LCIS.cpp
        code/chtoj/dutuyen/dp/LCS0.cpp
        code/chtoj/dutuyen/dp/LCS1.cpp
        code/chtoj/dutuyen/dp/LCS2.cpp
        code/chtoj/dutuyen/dp/LCS3.cpp
        code/chtoj/dutuyen/dp/LCSA0.cpp
        code/chtoj/dutuyen/dp/LEXLCS.cpp
        code/chtoj/dutuyen/dp/LIQ.cpp
        code/chtoj/dutuyen/dp/lis2.cpp
        code/chtoj/dutuyen/dp/LOCO.cpp
        code/chtoj/dutuyen/dp/nktick.cpp
        code/chtoj/dutuyen/dp/noidiem.cpp
        code/chtoj/dutuyen/dp/PALIND0.cpp
        code/chtoj/dutuyen/dp/PALIND2.cpp
        code/chtoj/dutuyen/dp/PALIND3.cpp
        code/chtoj/dutuyen/dp/PALIND7.cpp
        code/chtoj/dutuyen/dp/QBTICKET.cpp
        code/chtoj/dutuyen/dp/STR.cpp
        code/chtoj/dutuyen/dp/SUBSTRG.cpp
        code/chtoj/dutuyen/dp/VSTEPS.cpp
        code/chtoj/duyetphantap/atm.cpp
        code/chtoj/duyetphantap/expression.cpp
        code/chtoj/duyetphantap/maxsub.cpp
        code/chtoj/hsg10_2324/INTP.cpp
        code/chtoj/hsg10_2324/SPOR.cpp
        code/chtoj/hsg10_2324/tempCodeRunnerFile.cpp
        code/chtoj/khop_cau/AVENUES.cpp
        code/chtoj/khop_cau/CNODE.cpp
        code/chtoj/khop_cau/cut.cpp
        code/chtoj/ktradt/DAYDIEN.cpp
        code/chtoj/ktradt/FOOD.cpp
        code/chtoj/prehsg10_1/FIGURE.cpp
        code/chtoj/prehsg10_1/GBOMB.cpp
        code/chtoj/prehsg10_1/snt.cpp
        code/chtoj/prehsg10_1/tempCodeRunnerFile.cpp
        code/chtoj/prehsg10_2/matketnoi.cpp
        code/chtoj/prehsg10_2/tamgiacnguyento.cpp
        code/chtoj/prehsg10_4/donkhach.cpp
        code/chtoj/prehsg10_4/socola.cpp
        code/chtoj/prehsg10_4/tong3.cpp
        code/chtoj/priority_queue/COUPONS.cpp
        code/chtoj/priority_queue/KMIN.cpp
        code/chtoj/priority_queue/LISTMAN.cpp
        code/chtoj/priority_queue/PEACH.cpp
        code/chtoj/quaylui_nhanhcan/ABC.cpp
        code/chtoj/quaylui_nhanhcan/BINSTR3.cpp
        code/chtoj/quaylui_nhanhcan/Expression.cpp
        code/chtoj/quaylui_nhanhcan/fbird.cpp
        code/chtoj/quaylui_nhanhcan/ksack1.cpp
        code/chtoj/quaylui_nhanhcan/subsetsum.cpp
        code/chtoj/quaylui_nhanhcan/subsetsum3.cpp
        code/chtoj/quaylui_nhanhcan/TUGOFWAR.cpp
        code/chtoj/quaylui_nhanhcan/v8score.cpp
        code/chtoj/queue/DELARR.cpp
        code/chtoj/stack/deldigit.cpp
        code/chtoj/stack/lineup.cpp
        code/chtoj/tk5_22022025/cheby.cpp
        code/chtoj/tk5_22022025/TRIANGLES.cpp
        code/chtoj/tk5_25022025/mindis.cpp
        code/chtoj/tk5_25022025/pairs.cpp
        code/chtoj/tk5_25022025/schedule.cpp
        code/chtoj/tk5_25022025/stat.cpp
        code/chtoj/tk5_luyende/act21.cpp
        code/chtoj/tk5_luyende/cover1.cpp
        code/chtoj/tk5_luyende/cpair.cpp
        code/chtoj/tk5_luyende/elevator.cpp
        code/chtoj/tk5_luyende/ssort1.cpp
        "code/chtoj/tk5_luyende(dr)/cau1.cpp"
        "code/chtoj/tk5_luyende(dr)/cau2.cpp"
        "code/chtoj/tk5_luyende(dr)/cau3.cpp"
        code/chtoj/tk5_luyende01/sub.cpp
        code/chtoj/tk5_luyende01/tprime.cpp
        code/chtoj/tk5_luyende01/tprime_remake.cpp
        code/chtoj/tk5_luyende02/DIVISOR.cpp
        code/chtoj/tk5_luyende02/PAIRPBRO.cpp
        code/chtoj/tk5_luyende02/sdb.cpp
        code/chtoj/tk5_luyende03/RACE.cpp
        code/chtoj/tk5_luyende03/SUMMAX.cpp
        code/chtoj/tk5_luyende03/tempCodeRunnerFile.cpp
        code/chtoj/tk5_luyende03/UCLNAB.cpp
        code/chtoj/tk5_luyende04/FSEQ.cpp
        code/chtoj/tk5_luyende04/MINQ.cpp
        code/chtoj/tk5_luyende04/POINT.cpp
        "code/chtoj/tk5_luyende06/ FLOAT.cpp"
        "code/chtoj/tk5_luyende06/ MMSEG.cpp"
        code/chtoj/tk5_luyende06/COUPONS.cpp
        code/chtoj/tk5_luyende08/CDK.cpp
        code/chtoj/tk5_luyende08/meet.cpp
        code/chtoj/tk5_luyende08/SP01.cpp
        code/chtoj/tk5_luyende09/lminmax.cpp
        code/chtoj/tk5_luyende09/spair.cpp
        code/chtoj/tk5_luyende10/CDIV.cpp
        code/chtoj/tk5_luyende10/DQUERY.cpp
        code/chtoj/traihehungvuong2025/count.cpp
        code/chtoj/traihehungvuong2025/game.cpp
        code/chtoj/traihehungvuong2025/road.cpp
        code/chtoj/traihehungvuong2025/table.cpp
        code/chtoj/traihehungvuong2025/traffic.cpp
        code/codeforces/cogiaiquocgia/bfs/tapxe.cpp
        code/codeforces/cogiaiquocgia/bt/backsum.cpp
        code/codeforces/cogiaiquocgia/bt/buffet1.cpp
        code/codeforces/cogiaiquocgia/bt/daycontangcotrongso.cpp
        code/codeforces/cogiaiquocgia/bt/daycontangdainhat.cpp
        code/codeforces/cogiaiquocgia/bt/kthbracket.cpp
        code/codeforces/cogiaiquocgia/bt/muahoa.cpp
        code/codeforces/cogiaiquocgia/bt/ngoacrb.cpp
        code/codeforces/cogiaiquocgia/bt/optimizedbracket.cpp
        code/codeforces/cogiaiquocgia/bt/prime.cpp
        code/codeforces/cogiaiquocgia/bt/queen.cpp
        code/codeforces/cogiaiquocgia/bt/rook.cpp
        code/codeforces/cogiaiquocgia/bt/SEQ198.cpp
        code/codeforces/cogiaiquocgia/bt/tempCodeRunnerFile.cpp
        code/codeforces/cogiaiquocgia/dijk/dijkstra.cpp
        code/codeforces/cogiaiquocgia/dijk/duongdingannhat.cpp
        code/codeforces/cogiaiquocgia/dp/bitcoin1.cpp
        code/codeforces/cogiaiquocgia/dp/bitcoin2.cpp
        code/codeforces/cogiaiquocgia/dp/chiadaytaothanhtonglonnhat.cpp
        code/codeforces/cogiaiquocgia/dp/chiakeo.cpp
        code/codeforces/cogiaiquocgia/dp/chonxu1.cpp
        code/codeforces/cogiaiquocgia/dp/chuoidoixung.cpp
        code/codeforces/cogiaiquocgia/dp/cnum.cpp
        code/codeforces/cogiaiquocgia/dp/conduonghoa.cpp
        code/codeforces/cogiaiquocgia/dp/cscong.cpp
        code/codeforces/cogiaiquocgia/dp/dayconcotongbangs.cpp
        code/codeforces/cogiaiquocgia/dp/dayso1dainhat.cpp
        code/codeforces/cogiaiquocgia/dp/duongdilonnhat.cpp
        code/codeforces/cogiaiquocgia/dp/duongdingannhat.cpp
        code/codeforces/cogiaiquocgia/dp/dzero.cpp
        code/codeforces/cogiaiquocgia/dp/fibo.cpp
        code/codeforces/cogiaiquocgia/dp/frog1.cpp
        code/codeforces/cogiaiquocgia/dp/fwef.cpp
        code/codeforces/cogiaiquocgia/dp/giaoluu.cpp
        code/codeforces/cogiaiquocgia/dp/giaoluu2.cpp
        code/codeforces/cogiaiquocgia/dp/giaoluu3.cpp
        code/codeforces/cogiaiquocgia/dp/kesach.cpp
        code/codeforces/cogiaiquocgia/dp/knapsack1.cpp
        code/codeforces/cogiaiquocgia/dp/knapsack2.cpp
        code/codeforces/cogiaiquocgia/dp/liq.cpp
        code/codeforces/cogiaiquocgia/dp/luuanh.cpp
        code/codeforces/cogiaiquocgia/dp/muave.cpp
        code/codeforces/cogiaiquocgia/dp/nhatkhoivanhungdoahoa.cpp
        code/codeforces/cogiaiquocgia/dp/noimang.cpp
        code/codeforces/cogiaiquocgia/dp/Palindrome1.cpp
        code/codeforces/cogiaiquocgia/dp/ruttiennganhang.cpp
        code/codeforces/cogiaiquocgia/dp/socachditrenmatran.cpp
        code/codeforces/cogiaiquocgia/dp/suyeudoi.cpp
        code/codeforces/cogiaiquocgia/dp/tamphan.cpp
        code/codeforces/cogiaiquocgia/dp/thanhvakinghi.cpp
        code/codeforces/cogiaiquocgia/dp/tichlonnhat.cpp
        code/codeforces/cogiaiquocgia/dp/tomau.cpp
        code/codeforces/cogiaiquocgia/dp/wavio.cpp
        code/codeforces/cogiaiquocgia/dp/xauconchungdainhat.cpp
        code/codeforces/cogiaiquocgia/dp/xucxac.cpp
        code/codeforces/cogiaiquocgia/dtst/set1.cpp
        code/codeforces/cogiaiquocgia/dtst/set2.cpp
        code/codeforces/cogiaiquocgia/gr/bfs/bieudiencanh1.cpp
        "code/codeforces/cogiaiquocgia/hash + trie/anotherpalin.cpp"
        "code/codeforces/cogiaiquocgia/hash + trie/DSUB.cpp"
        "code/codeforces/cogiaiquocgia/hash + trie/goodsubstring.cpp"
        "code/codeforces/cogiaiquocgia/hash + trie/Paliny3.cpp"
        "code/codeforces/cogiaiquocgia/hash + trie/Qstr.cpp"
        "code/codeforces/cogiaiquocgia/hash + trie/Substr.cpp"
        "code/codeforces/cogiaiquocgia/hash + trie/SWindow.cpp"
        code/codeforces/cogiaiquocgia/lb/tongchan.cpp
        code/codeforces/cogiaiquocgia/mmtt/lucvantien.cpp
        code/codeforces/cogiaiquocgia/mmtt/rongthan.cpp
        code/codeforces/cogiaiquocgia/mmtt/summlr.cpp
        code/codeforces/cogiaiquocgia/ps-bn/capkhangiamayman.cpp
        code/codeforces/cogiaiquocgia/ps-bn/chenhlech.cpp
        code/codeforces/cogiaiquocgia/ps-bn/dattramphusong.cpp
        code/codeforces/cogiaiquocgia/ps-bn/dayK.cpp
        code/codeforces/cogiaiquocgia/ps-bn/daynguyento.cpp
        code/codeforces/cogiaiquocgia/ps-bn/doannguyento.cpp
        code/codeforces/cogiaiquocgia/ps-bn/gcdlonnhat.cpp
        code/codeforces/cogiaiquocgia/ps-bn/phuongtrinh1.cpp
        code/codeforces/cogiaiquocgia/ps-bn/phuongtrinh2.cpp
        code/codeforces/cogiaiquocgia/ps-bn/QueryOne.cpp
        code/codeforces/cogiaiquocgia/ps-bn/QueryThree.cpp
        code/codeforces/cogiaiquocgia/ps-bn/QueryTwo.
        code/codeforces/cogiaiquocgia/ps-bn/QueryTwo..cpp
        code/codeforces/cogiaiquocgia/ps-bn/tempCodeRunnerFile.cpp
        code/codeforces/cogiaiquocgia/ps-bn/truyenhinh.cpp
        code/codeforces/cogiaiquocgia/ps-bn/vitrixuathiendaucuoi.cpp
        code/codeforces/cogiaiquocgia/st/IT.cpp
        code/codeforces/cogiaiquocgia/st/lazy.cpp
        code/codeforces/cogiaiquocgia/tc/truyvetdaycontang.cpp
        code/codeforces/cogiaiquocgia/tc/truyvetdaywavio.cpp
        code/vnoi/mrngoc/dektra1/MULTIDSEQ.cpp
        code/vnoi/mrngoc/dektra1/tramphatsong.cpp
        repo/a.cpp
        repo/a_trau.cpp
        repo/findthebiggestprimefactors.cpp
        repo/gentest_macos.cpp
        repo/gentest_win.cpp
        repo/segmented_sieve.cpp
        repo/snippet.cpp
        repo/tsnt.cpp
        tests/filetest_1.cpp
        tests/filetest_2.cpp
        tests/filetest_3.cpp
        tests/filetest_4.cpp
        tests/filetest_5.cpp)
